# NextRender

./: .gitmodules  CMakeLists.txt  README.md
Runtime/: Application.cpp  Application.h  CMakeLists.txt  InputEvents.cpp  InputEvents.h  Platform.h  pch.h
Runtime/Common/: Logging.h  Utils.h
Runtime/Gfx/: GfxRenderPipline.h  GfxResourceManager.cpp  GfxResourceManager.h  GfxSampler.cpp  GfxSampler.h  GfxShader.cpp  GfxShader.h
Runtime/Gfx/Vulkan/: VulkanDevice.cpp  VulkanDevice.h  VulkanGfx.cpp  VulkanGfx.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanQueue.cpp  VulkanQueue.h  VulkanShader.cpp  VulkanShader.h  VulkanUtils.h
Runtime/Platform/Windows/: WindowsPlatform.cpp  WindowsPlatform.h
Runtime/Render/: Mesh.h
Runtime/Scene/: Component.h  GameObject.cpp  GameObject.h  SceneLoader.cpp  SceneLoader.h  Transform.h
Runtime/Thread/: RunnableThread.cpp  RunnableThread.h  ThreadPool.cpp  ThreadPool.h
Samples/: CMakeLists.txt
Samples/01_HelloTriangle/: CMakeLists.txt  HelloTriangle.cpp  Main.cpp
