set(TARGET_NAME Sample_01_HelloTriangle)
set(FOLDER_NAME Sample_01_HelloTriangle)
INCLUDE_DIRECTORIES(${NEXT_RENDER_ROOT_PATH}/Runtime)
#set(RENDER_DONKEY_SAMPLE_HEADER "")
set(RENDER_DONKEY_SAMPLE_SOURCE HelloTriangle.cpp Main.cpp)
set(RENDER_DONKEY_SAMPLE_LIBS Runtime)
add_executable(${TARGET_NAME} ${RENDER_DONKEY_SAMPLE_SOURCE})
set(INSTALL_DIR "bin")
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES FOLDER ${FOLDER_NAME})
set_property(TARGET ${TARGET_NAME} APPEND PROPERTY LINK_FLAGS "/SUBSYSTEM:WINDOWS")
target_link_libraries( ${TARGET_NAME} ${RENDER_DONKEY_SAMPLE_LIBS} )
install (TARGETS ${TARGET_NAME} DESTINATION ${INSTALL_DIR})
message(STATUS "Setup Project EXE ${FOLDER_NAME}/[${TARGET_NAME}]")